<resources>
    <string name="app_name">Basics</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="text_hint">Write something</string>
    <string name="submit_button">Submit</string>
    <string name="reset_button">Reset</string>
    <string name="undo_button">Undo</string>
    <string name="text_view_main">Insert text from EditView</string>
    <string name="fab_button">fabButton</string>
</resources>